tests/positive/b4_forward_ref.lator
y is limit + 1
limit is 18
