tests/negative/b3_bool_binding.lator
x is true
y is x + 1
